[BE] feat: 헤더에서 userId 받아오는 로직 추가
- 시큐리티 설정 이전까지는 임시로 이렇게 하겠습니다 !